# LMWallpaper

./: CMakeLists.txt  LMWallpaper.manifest  LMWallpaper.rc  Logger.cpp  Logger.h  README.md  SettingsDialog.cpp  TrayManager.cpp  TrayManager.h  WallpaperManager.h  appveyor.yml  build.bat  clean-build.bat  copy-system-icons.bat  create-icons.bat  framework.h  main.cpp  targetvar.h  vcpkg-fix.bat
.github/workflows/: build-windows.yml
Headers/: ErrorHandler.h  ImageProcessor.h  LMWallpapers.rc  MemoryOptimizer.h  SettingsWindow.h  ThemeManager.h  TrayManager.h  VideoPlayer.h  VideoPreview.h  framework.h  resource.h
Installer/: installer.iss
Source/: ErrorHandler.cpp  ImageProcesser.cpp  ImageProcessor.cpp  MemoryOptimizer.cpp  SettingsWindow.cpp  TrayManager.cpp  VideoPlayer.cpp  VideoPreview.cpp
tests/: TestUtils.h  test_main.cpp  test_memory_optimizer.cpp  test_video_player.cpp
